Checkpoint before assistant change: Ensure that animated elements are visible within the product features
Removes unused height and width percentage classes from `public/out.css` to improve visibility.

--- a/public/out.css
+++ b/public/out.css
@@ -723,10 +723,6 @@ video {
   height: 100%;
 }
 
-.h-3\/5 {
-  height: 60%;
-}
-
 .h-\[425px\] {
   height: 425px;
 }
@@ -753,10 +749,6 @@ video {
 
 .w-24 {
   width: 6rem;
-}
-
-.w-3\/5 {
-  width: 60%;
 }
 
 .w-\[45\%\] {
@@ -1265,14 +1257,6 @@ video {
     height: 3.5rem;
   }
 
-  .sm\:h-1\/2 {
-    height: 50%;
-  }
-
-  .sm\:w-1\/2 {
-    width: 50%;
-  }
-
   .sm\:w-\[42\%\] {
     width: 42%;
   }
@@ -1341,16 +1325,8 @@ video {
     margin-top: 0px;
   }
 
-  .md\:h-2\/5 {
-    height: 40%;
-  }
-
   .md\:w-1\/2 {
     width: 50%;
-  }
-
-  .md\:w-2\/5 {
-    width: 40%;
   }
 
   .md\:grid-cols-2 {
@@ -1416,14 +1392,6 @@ video {
 
   .lg\:bottom-\[5\%\] {
     bottom: 5%;
-  }
-
-  .lg\:h-1\/3 {
-    height: 33.333333%;
-  }
-
-  .lg\:w-1\/3 {
-    width: 33.333333%;
   }
 
   .lg\:w-\[38\%\] {
